// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <ArrowUp /> icon should render ArrowUp icon correctly with default props 1`] = `
<svg
  className="arrowUpIcon"
  height={40}
  viewBox="0 0 240.835 240.835"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    ArrowUp Icon
  </title>
  <path
    className="arrowUpIconPath"
    d="M129.007,57.819c-4.68-4.68-12.499-4.68-17.191,0L3.555,165.803c-4.74,4.74-4.74,12.427,0,17.155 c4.74,4.74,12.439,4.74,17.179,0l99.683-99.406l99.671,99.418c4.752,4.74,12.439,4.74,17.191,0c4.74-4.74,4.74-12.427,0-17.155 L129.007,57.819z"
    fill="currentColor"
  />
</svg>
`;

exports[`Test <ArrowUp /> icon should render ArrowUp icon correctly with props 1`] = `
<svg
  className="testClassname"
  height={30}
  viewBox="0 0 240.835 240.835"
  width={30}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    ArrowUp Icon
  </title>
  <path
    className="arrowUpIconPath"
    d="M129.007,57.819c-4.68-4.68-12.499-4.68-17.191,0L3.555,165.803c-4.74,4.74-4.74,12.427,0,17.155 c4.74,4.74,12.439,4.74,17.179,0l99.683-99.406l99.671,99.418c4.752,4.74,12.439,4.74,17.191,0c4.74-4.74,4.74-12.427,0-17.155 L129.007,57.819z"
    fill="#a4a1a1"
  />
</svg>
`;
